[tool.poetry]
name = "deribit"
version = "0.1.0"
description = ""
authors = ["Dmitriy Bazanov <zugzvangg1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
websockets = "^10.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"
nest-asyncio = "^1.5.5"
pandas = "^1.5.0"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
