[tool.poetry]
name = "deribit"
version = "0.1.0"
description = ""
authors = ["Dmitriy Bazanov <zugzvangg1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
websockets = "^10.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"
nest-asyncio = "^1.5.5"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
black = "^22.10.0"
loguru = "^0.6.0"
vaex = "^4.16.0"
numba = "^0.56.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
